# py-xdrlib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  xdrlib.py  xdrlib.rst
.github/workflows/: pylint.yml
tests/: test_xdrlib.py
